# rust-mdd

./: Cargo.toml  README.md
benches/: codec_bench.rs
src/: codec.rs  decode.rs  error.rs  lib.rs  main.rs  mdd.rs
src/cmdc/: decode.rs  encode.rs  mod.rs  value.rs
