[package]
name = "rust_mdd"
version = "0.1.2"
edition = "2021"
authors = ["Jason Lee<jason.lee@matrixx.com>"]
license = "MIT"
repository = "https://github.com/matrixxsoftware/rust-mdd"

[dependencies]
bigdecimal = "0.3"

[dev-dependencies]

[[bench]]
name = "codec_bench"
path = "benches/codec_bench.rs"
# harness = false # Set to false to allow custom benchmark runners
